[doc] Fixing overflow of syntax highlight

--- a/source/assets/stylesheets/docs/_base.sass
+++ b/source/assets/stylesheets/docs/_base.sass
@@ -582,6 +582,7 @@ p code
 // Syntax Highlight
 //
 .highlight
+  overflow: auto
   background-color: rgba(0, 0, 0, 0.02)
   line-height: 1.4
   border: solid 1px #e1e1e8
@@ -598,9 +599,6 @@ p code
 
   .code
     padding: 10px 15px
-
-  pre
-    white-space: pre-wrap
 
 @media (max-width: 991px)
   .doc-sidebar-menu
